--- a/biblioteca_digital/libros/templates/libros/editar_usuario.html
+++ b/biblioteca_digital/libros/templates/libros/editar_usuario.html
@@ -237,13 +237,15 @@
                     <input type="password" id="password_confirm" name="password_confirm" placeholder="Confirmar nueva contraseña">
                 </div>
                 
-                <div class="form-group">
+              <div class="form-group">
                     <label for="perfil">Tipo de Usuario:</label>
                     <select id="perfil" name="perfil" required>
                         <option value="alumno" {% if usuario.perfil == 'alumno' %}selected{% endif %}>Alumno</option>
+                        <option value="docente" {% if usuario.perfil == 'docente' %}selected{% endif %}>Docente</option>
                         <option value="bibliotecaria" {% if usuario.perfil == 'bibliotecaria' %}selected{% endif %}>Bibliotecaria</option>
                     </select>
                 </div>
+
                 
                 <div class="form-group">
                     <div class="checkbox-group">
