--- a/materiales/templates/materiales/formularios_altas/alta_multimedia.html
+++ b/materiales/templates/materiales/formularios_altas/alta_multimedia.html
@@ -1,16 +1,16 @@
 {% load static %}
-<form id="form_alta_multimedia" method="POST" action="/alta-multimedia/">
+<form id="form_alta_multimedia" method="POST" action="/alta-multimedia/" data-form-id="multimedia">
   {% csrf_token %}
   <div data-block="content" data-form-type="multimedia">
     <div class="row mb-4">
         <div class="col-md-2">
-            <label for="profesor">Profesor/a <span class="text-danger">*</span></label>
-            <input type="text" class="form-control" id="profesor" name="profesor" 
+            <label for="profesor" class="form-label small">Profesor/a <span class="text-danger">*</span></label>
+            <input type="text" class="form-control form-control-sm" id="profesor" name="profesor" 
                    required placeholder="Nombre del profesor">
         </div>
         <div class="col-md-2">
-            <label for="carrera">Carrera <span class="text-danger">*</span></label>
-            <select class="form-select" id="carrera" name="carrera" required>
+            <label for="carrera" class="form-label small">Carrera <span class="text-danger">*</span></label>
+            <select class="form-control form-control-sm" id="carrera" name="carrera" required>
                 <option value="">Carrera</option>
                 <option value="Profesorado de Educación Inicial">Profesorado de Educación Inicial</option>
                 <option value="Profesorado de Educación Primaria">Profesorado de Educación Primaria</option>
@@ -23,17 +23,17 @@
             </select>
         </div>
         <div class="col-md-2">
-            <label for="materia">Materia <span class="text-danger">*</span></label>
-            <select class="form-select" id="materia" name="materia" required>
+            <label for="materia" class="form-label small">Materia <span class="text-danger">*</span></label>
+            <select class="form-control form-control-sm" id="materia" name="materia" required>
                 <option value="">Primero seleccione una carrera</option>
             </select>
         </div>
     </div>
     <div class="row mb-4">
         <div class="col-md-2">
-            <label for="ingresar_enlace">Ingresar enlace (URL)</label>
+            <label for="ingresar_enlace" class="form-label small">Ingresar enlace (URL)</label>
             <div class="input-group">
-                <input type="url" class="form-control" id="ingresar_enlace" name="ingresar_enlace" placeholder="URL del contenido multimedia">
+                <input type="url" class="form-control form-control-sm" id="ingresar_enlace" name="ingresar_enlace" placeholder="URL del contenido multimedia">
             </div>
         </div>
         <div class="col-md-4">
